// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ts-path-based non-publishable package > should generate expected vite.config.ts 1`] = `
"/// <reference types='vitest' />
import { defineConfig } from 'vite';
import { nxViteTsPaths } from '@nx/vite/plugins/nx-tsconfig-paths.plugin';
import { nxCopyAssetsPlugin } from '@nx/vite/plugins/nx-copy-assets.plugin';

export default defineConfig(() => ({
  root: import.meta.dirname,
  cacheDir: '../../../node_modules/.vite/packages/foo/bar-baz',
  plugins: [nxViteTsPaths(), nxCopyAssetsPlugin(['*.md'])],
  // Uncomment this if you are using workers.
  // worker: {
  //   plugins: () => [ nxViteTsPaths() ],
  // },
  test: {
    passWithNoTests: true,
    name: 'foo-bar-baz',
    watch: false,
    globals: true,
    environment: 'node',
    include: ['{src,tests}/**/*.{test,spec}.{js,mjs,cjs,ts,mts,cts,jsx,tsx}'],
    reporters: ['default'],
    coverage: {
      reportsDirectory: '../../../coverage/packages/foo/bar-baz',
      provider: 'v8' as const,
    },
  },
}));
"
`;

exports[`ts-path-based publishable package > should generate expected vite.config.ts 1`] = `
"/// <reference types='vitest' />
import { defineConfig } from 'vite';
import dts from 'vite-plugin-dts';
import * as path from 'path';
import { nxViteTsPaths } from '@nx/vite/plugins/nx-tsconfig-paths.plugin';
import { nxCopyAssetsPlugin } from '@nx/vite/plugins/nx-copy-assets.plugin';

export default defineConfig(() => ({
  root: import.meta.dirname,
  cacheDir: '../../../node_modules/.vite/packages/foo/bar-baz',
  plugins: [
    nxViteTsPaths(),
    nxCopyAssetsPlugin(['*.md']),
    dts({
      entryRoot: 'src',
      tsconfigPath: path.join(import.meta.dirname, 'tsconfig.lib.json'),
      pathsToAliases: false,
    }),
  ],
  // Uncomment this if you are using workers.
  // worker: {
  //   plugins: () => [ nxViteTsPaths() ],
  // },
  // Configuration for building your library.
  // See: https://vite.dev/guide/build.html#library-mode
  build: {
    outDir: '../../../dist/packages/foo/bar-baz',
    emptyOutDir: true,
    reportCompressedSize: true,
    commonjsOptions: {
      transformMixedEsModules: true,
    },
    lib: {
      // Could also be a dictionary or array of multiple entry points.
      entry: 'src/index.ts',
      name: 'foo-bar-baz',
      fileName: 'index',
      // Change this to the formats you want to support.
      // Don't forget to update your package.json as well.
      formats: ['es' as const, 'cjs' as const],
    },
    rollupOptions: {
      // External packages that should not be bundled into your library.
      external: [],
    },
  },
  test: {
    passWithNoTests: true,
    name: 'foo-bar-baz',
    watch: false,
    globals: true,
    environment: 'node',
    include: ['{src,tests}/**/*.{test,spec}.{js,mjs,cjs,ts,mts,cts,jsx,tsx}'],
    reporters: ['default'],
    coverage: {
      reportsDirectory: '../../../coverage/packages/foo/bar-baz',
      provider: 'v8' as const,
    },
  },
}));
"
`;

exports[`ts-reference-based not publishable package > should generate expected package.json 1`] = `
"{
  "name": "@ns/foo-bar-baz",
  "version": "0.0.1",
  "private": true,
  "type": "module",
  "main": "./src/index.ts",
  "types": "./src/index.ts",
  "exports": {
    ".": {
      "types": "./src/index.ts",
      "import": "./src/index.ts",
      "default": "./src/index.ts"
    },
    "./package.json": "./package.json"
  },
  "nx": {
    "name": "foo-bar-baz",
    "targets": {
      "lint": {
        "executor": "@nx/eslint:lint"
      },
      "test": {
        "executor": "@nx/vitest:test",
        "outputs": [
          "{options.reportsDirectory}"
        ],
        "options": {
          "reportsDirectory": "coverage/packages/foo/bar-baz"
        }
      }
    }
  },
  "dependencies": {}
}
"
`;

exports[`ts-reference-based not publishable package > should generate expected vite.config.ts 1`] = `
"/// <reference types='vitest' />
import { defineConfig } from 'vite';

export default defineConfig(() => ({
  root: import.meta.dirname,
  cacheDir: '../../../node_modules/.vite/packages/foo/bar-baz',
  plugins: [],
  // Uncomment this if you are using workers.
  // worker: {
  //  plugins: [],
  // },
  test: {
    passWithNoTests: true,
    name: 'foo-bar-baz',
    watch: false,
    globals: true,
    environment: 'node',
    include: ['{src,tests}/**/*.{test,spec}.{js,mjs,cjs,ts,mts,cts,jsx,tsx}'],
    reporters: ['default'],
    coverage: {
      reportsDirectory: './test-output/vitest/coverage',
      provider: 'v8' as const,
    },
  },
}));
"
`;

exports[`ts-reference-based publishable package > should generate expected package.json 1`] = `
"{
  "name": "@ns/foo-bar-baz",
  "version": "0.0.1",
  "type": "module",
  "main": "./dist/index.js",
  "module": "./dist/index.js",
  "types": "./dist/index.d.ts",
  "exports": {
    "./package.json": "./package.json",
    ".": {
      "development": "./src/index.ts",
      "types": "./dist/index.d.ts",
      "import": "./dist/index.js",
      "require": "./dist/index.cjs"
    }
  },
  "files": [
    "dist",
    "!**/*.tsbuildinfo"
  ],
  "nx": {
    "name": "foo-bar-baz",
    "targets": {
      "build": {
        "executor": "@nx/vite:build",
        "outputs": [
          "{options.outputPath}"
        ],
        "defaultConfiguration": "production",
        "options": {
          "outputPath": "packages/foo/bar-baz/dist"
        },
        "configurations": {
          "development": {
            "mode": "development"
          },
          "production": {
            "mode": "production"
          }
        }
      },
      "test": {
        "executor": "@nx/vitest:test",
        "outputs": [
          "{options.reportsDirectory}"
        ],
        "options": {
          "reportsDirectory": "coverage/packages/foo/bar-baz"
        }
      },
      "lint": {
        "executor": "@nx/eslint:lint"
      }
    }
  },
  "dependencies": {},
  "publishConfig": {
    "access": "public"
  },
  "homepage": "https://github.com/author/repo",
  "bugs": {
    "url": "https://github.com/author/repo/issues"
  },
  "author": "Author",
  "license": "MIT",
  "repository": {
    "type": "git",
    "url": "https://github.com/author/repo.git",
    "directory": "packages/foo/bar-baz"
  }
}
"
`;

exports[`ts-reference-based publishable package > should generate expected vite.config.ts 1`] = `
"/// <reference types='vitest' />
import { defineConfig } from 'vite';
import dts from 'vite-plugin-dts';
import * as path from 'path';

export default defineConfig(() => ({
  root: import.meta.dirname,
  cacheDir: '../../../node_modules/.vite/packages/foo/bar-baz',
  plugins: [
    dts({
      entryRoot: 'src',
      tsconfigPath: path.join(import.meta.dirname, 'tsconfig.lib.json'),
    }),
  ],
  // Uncomment this if you are using workers.
  // worker: {
  //  plugins: [],
  // },
  // Configuration for building your library.
  // See: https://vite.dev/guide/build.html#library-mode
  build: {
    outDir: './dist',
    emptyOutDir: true,
    reportCompressedSize: true,
    commonjsOptions: {
      transformMixedEsModules: true,
    },
    lib: {
      // Could also be a dictionary or array of multiple entry points.
      entry: 'src/index.ts',
      name: 'foo-bar-baz',
      fileName: 'index',
      // Change this to the formats you want to support.
      // Don't forget to update your package.json as well.
      formats: ['es' as const, 'cjs' as const],
    },
    rollupOptions: {
      // External packages that should not be bundled into your library.
      external: [],
    },
  },
  test: {
    passWithNoTests: true,
    name: 'foo-bar-baz',
    watch: false,
    globals: true,
    environment: 'node',
    include: ['{src,tests}/**/*.{test,spec}.{js,mjs,cjs,ts,mts,cts,jsx,tsx}'],
    reporters: ['default'],
    coverage: {
      reportsDirectory: './test-output/vitest/coverage',
      provider: 'v8' as const,
    },
  },
}));
"
`;
